--- a/main/templates/main/show_post.html
+++ b/main/templates/main/show_post.html
@@ -3,38 +3,19 @@
 {% block content %}
 
 <div class="view-post">
+
     <div class="view-header">
-        <div id="view-title">Как правильно варить яйца</div> <!-- Заголовок -->
-        <div id="view-creator">Создатель: Богдане Малове</div> <!-- Создатель -->
-        <div id="view-time">3 Декабря 2022 г. 14:22</div> <!-- Дата создания -->
+        <div id="view-title">{{ post.title }}</div> <!-- Заголовок -->
+        <div id="view-creator">Создатель: {{ post.creator }}</div> <!-- Создатель -->
+        <div id="view-time">{{ post.time_create }}</div> <!-- Дата создания -->
     </div>
 
     <div class="view-text">
-        Привет читатель, вот тебе инструкция о том - как-же всё-таки правильно приготовить яйца в домашних условиях.<br>
-        Нам понадобится: 1 индеец, вода - нормальная, яйца желательно куриные, и ещё чёта.<br>
-        Вот что надо делать:<br>
-        1 - Бросаешь (жестко прям чтобы разбились аж) яца в каструлю и ждёшь пока закипит вода (изначально она должна быть холодной)<br>
-        2 - ждёшь, ждёшь, ждёшь хз скока но надо ждать.<br>
-        3 - Вот вода закипает яйца начали стучать, типо выпусти меня дапаёёёёп.<br>
-        4 - Короче берешь их и быстро в холодную воду<br>
-        5 - Молишься священным будильникам, убиваешь индейца, проверяешь - жив ли Илья Меддисон.<br>
-        6 - Ешь яйца но перед этим помолись чтобы Илья Меддисон жил ещё долгие годы.<br>
-        <br>
-        * БОНУС *<br>
-        <br>
-        Сейчас бонусом быстро расскажу как правильно молится за жизнь Ильи Меддисона!<br>
-        <br>
-        "Боже, храни Илью Меддисона"<br>
-        "Боже, храни Илью Меддисона"<br>
-        "Боже, храни Илью Меддисона"<br>
-        "Боже, храни Илью Меддисона"<br>
-        "Боже, храни Илью Меддисона"<br>
-        "Боже, храни Илью Меддисона"<br>
-        "Боже, храни Илью Меддисона"<br>
-        "Боже, храни Илью Меддисона"<br>
-        <br>
-        (короче повторяешь это ровно 8 раз, если меньше он умрёт, если больше никто не знает че будет)<br>
+        {{ post.long }}
     </div>
 </div>
+
+<!-- ---------- -->
+<a href="#top" id="go-top-text">Наверх</a>
 
 {% endblock content %}
